basic/ingress-controller/traefik-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dstats-ingress
  namespace: dstats
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: dstats.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dstats-service
            port:
              number: 80
